# ai-agent-using-gemini

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  tests.py  utils.py
calculator/: main.py  tests.py
calculator/pkg/: calculator.py  render.py
functions/: constants.py  files.py
